--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,1 +1,2 @@
-target_include_directories(dualventer PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/asio/asio/include)
+target_include_directories(dualventer PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/asio/asio/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/sol2/single/include)
