--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "lib/sol2"]
 	path = lib/sol2
 	url = https://github.com/ThePhD/sol2
+[submodule "lib/cpr"]
+	path = lib/cpr
+	url = https://github.com/whoshuu/cpr
+[submodule "lib/sws"]
+	path = lib/sws
+	url = https://github.com/eidheim/Simple-WebSocket-Server
