--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(dualventer)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(dualventer src/main.cpp src/bot.cpp src/snowflake.cpp)
+add_executable(dualventer src/main.cpp src/bot.cpp)
 target_include_directories(dualventer PRIVATE include/)
 add_subdirectory(lib)
